loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:6: error: ';' expected but '{' found.
  }while (crossing == false) {
                             ^